5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3992/executions/1573_1327.log
== SUBMITION (2019-03-11 15:08:19) 
-- CODE:
PRINT(90-55)
-- EXECUTION TIME:
0.180016
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1327/main.py", line 1, in <module>
    PRINT(90-55)
NameError: name 'PRINT' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:08:45) 
-- CODE:
PRINT(90-55)
-- EXECUTION TIME:
0.117619
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1327/main.py", line 1, in <module>
    PRINT(90-55)
NameError: name 'PRINT' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:09:02) 
-- CODE:
PRINT(90-55)
-- EXECUTION TIME:
0.108537
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1327/main.py", line 1, in <module>
    PRINT(90-55)
NameError: name 'PRINT' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:16:47) 
-- CODE:
PRINT(90-55)
-- EXECUTION TIME:
0.140379
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1327/main.py", line 1, in <module>
    PRINT(90-55)
NameError: name 'PRINT' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:17:16) 
-- CODE:
PRINT(90_55)
-- EXECUTION TIME:
0.141616
-- ERROR:
  File "/home/codebench/codes/1573/1327/main.py", line 1
    PRINT(90_55)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:17:18) 
-- CODE:
PRINT(90_55)
-- EXECUTION TIME:
0.14028
-- ERROR:
  File "/home/codebench/codes/1573/1327/main.py", line 1
    PRINT(90_55)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:17:18) 
-- CODE:
PRINT(90_55)
-- EXECUTION TIME:
0.133763
-- ERROR:
  File "/home/codebench/codes/1573/1327/main.py", line 1
    PRINT(90_55)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:17:26) 
-- CODE:
PRINT(90-55)
-- EXECUTION TIME:
0.153272
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1327/main.py", line 1, in <module>
    PRINT(90-55)
NameError: name 'PRINT' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:17:32) 
-- CODE:
PRINT(90_55)
-- EXECUTION TIME:
0.163956
-- ERROR:
  File "/home/codebench/codes/1573/1327/main.py", line 1
    PRINT(90_55)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:18:20) 
-- CODE:
PRINT(90/55)
-- EXECUTION TIME:
0.205019
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1327/main.py", line 1, in <module>
    PRINT(90/55)
NameError: name 'PRINT' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:18:24) 
-- CODE:
PRINT(9055)
-- EXECUTION TIME:
0.172993
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1327/main.py", line 1, in <module>
    PRINT(9055)
NameError: name 'PRINT' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:18:49) 
-- CODE:
PRINT(90'55)
-- EXECUTION TIME:
0.242197
-- ERROR:
  File "/home/codebench/codes/1573/1327/main.py", line 1
    PRINT(90'55)
               ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:19:01) 
-- CODE:
PRINT(90'-'55)
-- EXECUTION TIME:
0.168809
-- ERROR:
  File "/home/codebench/codes/1573/1327/main.py", line 1
    PRINT(90'-'55)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:19:18) 
-- CODE:
PRINT(90-55)
-- EXECUTION TIME:
0.116636
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1327/main.py", line 1, in <module>
    PRINT(90-55)
NameError: name 'PRINT' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:19:32) 
-- CODE:
print(90-55)
-- EXECUTION TIME:
0.131827
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
